# inf_daken_counter_obsw

./: .gitignore  Makefile  README.md  TODO.md  autoload.html  build.sh  clear_type.py  daken_logger.py  data_collection.py  define.py  detect_core.py  dj_level.py  dp_unofficial.pkl  exe_recog.py  filter.py  gauge.html  get_infinitas_db.py  get_spdiff.py  graph.html  graphtarget.py  informations4.0.res  judge.html  kata.patch  lib_score_manager.py  log_manager.py  manage_output.py  manage_score.py  mask.py  notes.py  notes_counter.pyw  notes_counter_after.pyw  noteslist.pkl  number_best.py  number_current.py  obssocket.py  option.html  playlog.infdc  pyproject.toml  recog.py  record.py  (+11 more)
doc/: base.css
docs/: base.css  index.html
gui/: annotation.py  export.py  general.py  main.py  manage.py  static.py
layout/: autoload.html  basetitle.html  folder_dp.html  folder_sp.html  folder_stat.css  folder_stats.html  gauge.html  graph.html  graph_with_frame.html  history_cursong.html  inf_today_stats.html  inf_today_stats_for_score.html  judge.html  option.html  series.html  today_result.html  today_result_for_score.html  today_update.html
misc/: build_music_db.py  convert_db.py  database_editor.py  edit.py  exe_recog.py  test_opt_conv.py  veri_opt.py  veri_result.py  veri_select.py
resources/: areas.json  clear_type.res  dead.npy  details1.0.res  details1.0.res.timestamp  details2.0.res  details2.0.res.timestamp  details3.0.res  details3.0.res.timestamp  details3.1.res  dj_level.res  get_screen.res  graphtarget.res  (+46 more)
updator/: Makefile  pyproject.toml  update.py
(+126 files in other folders)
