[project]
name = "updator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "pillow>=12.0.0",
    "pyarmor>=9.2.1",
    "pygame>=2.6.1",
    "pyinstaller>=6.17.0",
    "requests>=2.32.5",
    "websockets>=15.0.1",
]
